Refactor about.html form structure and styling

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 </marquee>
 <!--=====Basic Details========-->
 
-<form >
+<form style = "font-size:30px" >
   <style>
 body {
     margin: 0;  /* white gap hataane ke liye */
@@ -195,6 +195,7 @@ I confirm that the information provided is correct.
 
 
 </form>
+
 
 
 </center>
