Fix marquee link and formatting in index.html
Updated the marquee link to point to the correct service page and fixed minor formatting issues.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <CENTER>
     <marquee widht="300" height="35" bgcolor="green" style="font-size:30px">This <a
-            href="https://google.com">SERVICE</a>
+            href="https://abhira452.github.io/Web-Registration-Form/about2.html">SERVICE</a>
         has been starts soon </marquee>
 
     <head>
@@ -31,6 +31,7 @@
             style="background-size:cover">
     </div>
 </section>
+
 
 
 </html>
