Enhance index.html with responsive design and styles
Added viewport meta tag and CSS styles for body and images.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,28 @@
 
         </body>
 
-        <img src= "laptop2.jpg" width="100%, 
-            style="background-size:cover">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  body{
+    margin:0;
+    padding:0;
+  }
+
+  img{
+    width:100%;
+    height:auto;
+    display:block;
+  }
+</style>
+</head>
+<body>
+
+<img src="laptop2.jpg">
+<img src="laptop4.png">
     </div>
 </section>
 
 
 
 </html>
+
