--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 </CENTER>
 <section style="font-size:30" background-color: "blue">
     <div>
-        <select onchange="location = this.value;" style="width:250px; height:45px; font-size:18px;">
+        <select onchange="location = this.value;" 
+style="width:250px; height:45px; font-size:18px; 
+background-color:#8d183b; 
+color:white; 
+border:none; 
+border-radius:8px;">
             <option value="">STUDENT</option>
             <option value="about.html">Register</option>
             <option value="about2.html">Login as Student</option>
@@ -51,4 +56,5 @@
 
 
 </html>
+
 
