--- a/about.html
+++ b/about.html
@@ -188,13 +188,13 @@ I confirm that the information provided is correct.
 
 <br><br>
 
-<input type="submit" value="Register">
-<input type="reset" value="Clear">
-
+<input type="submit" value="Register"style = font-size:30px >
+<input type="reset" value="Clear" style = font-size:30px>
 
 
 
 </form>
+
 
 
 </center>
