--- a/index.html
+++ b/index.html
@@ -53,9 +53,57 @@ border-radius:8px;">
     </div>
 </section>
 
+    <title>Help Button</title>
+<style>
+.help-container{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.help-btn{
+    padding: 12px 18px;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+}
+
+.whatsapp{
+    background-color: #25D366;
+}
+
+.gmail{
+    background-color: #EA4335;
+}
+</style>
+</head>
+
+<body>
+
+<div class="help-container">
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/7651828165" target="_blank" class="help-btn whatsapp">
+        Chat on WhatsApp
+    </a>
+
+    <!-- Gmail Button -->
+    <a href="abhirai452.in@gmail.com" class="help-btn gmail">
+        Email Us
+    </a>
+</div>
+
 
 
 </html>
+
 
 
 
